--- a/notes/nerdview/index.html
+++ b/notes/nerdview/index.html
@@ -14,7 +14,7 @@
         
     </title>
 
-    <meta name="description" content="My daughter just letting me know where she is, but I see a code." />
+    <meta name="description" content="My daughter is just letting me know where she is but I see a code." />
     
     <!-- RSS -->
 
@@ -32,7 +32,7 @@
     <!-- Open Graph -->
 
     <meta property="og:title" content="Nerd View"/>
-    <meta property="og:description" content="My daughter just letting me know where she is, but I see a code."/>
+    <meta property="og:description" content="My daughter is just letting me know where she is but I see a code."/>
     <meta property="og:image" content="https://kostyanetsky.me/assets/images/og.jpg">
     <meta property="og:type" content="article"/>
     <meta property="og:url" content= "https://kostyanetsky.me/notes/nerdview/" />    
