--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 
         
 
-        <div class="f4 lh-copy black"><p class="measure-wide">Hi there! My name is Vlad. I'm a business software developer based in Kemerovo, Russia. I specialize in <a class="link blue dim bb" href="https://1c.com">1C:Enterprise</a> and experiment with everything else. A lot.</p>
+        <div class="f4 lh-copy black"><p class="measure-wide">Hi there! My name is Vlad. I'm a business software developer based in Kemerovo, Russia. I specialize in <a class="link blue dim bb" href="https://1c.com" target="_blank">1C:Enterprise</a> and experiment with everything else. A lot.</p>
 <p class="measure-wide">I also have a passion for cycling and video games.</p>
-<p class="measure-wide">Currently I work for <a class="link blue dim bb" href="https://firstbit.ae">FirstBIT Technologies</a>. Our main project is <nobr><a class="link blue dim bb" href="https://firstbit.ae/products/erp-dubai/financial_management/">FirstBIT ERP</a></nobr> — it is a company management system designed for United Arab Emirates.</p></div>
+<p class="measure-wide">Currently I work for <a class="link blue dim bb" href="https://firstbit.ae" target="_blank">FirstBIT Technologies</a>. Our main project is <nobr><a class="link blue dim bb" href="https://firstbit.ae/products/erp-dubai/financial_management/" target="_blank">FirstBIT ERP</a></nobr> — it is a company management system designed for United Arab Emirates.</p></div>
         
     </article>
 
